--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@ img {
 body {
   background-color: #eee;
 }
+.gaegu-regular {
+  font-family: "Gaegu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  
+  /* ville gör fonten lite mer läsbar genom att göra den lite större */
+  font-size: 110%;
+}
 
 .wrapper {
   margin: auto;
@@ -92,6 +100,10 @@ body {
   display: flex;
   justify-content: center;
 }
+.partners_logo#gpt {
+  width: 50%;
+  align-self: center;
+}
 .column1 {
   grid-area: column_1;
 }
@@ -101,7 +113,9 @@ body {
 .column3 {
   grid-area: column_3;
 }
-
+.column_img{
+  margin: auto;
+}
 .test {
   background-color: yellow;
 }
