--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,23 +9,30 @@ body {
   font-family: "Gaegu", sans-serif;
   font-weight: 400;
   font-style: normal;
-  
+
   /* ville gör fonten lite mer läsbar genom att göra den lite större */
   font-size: 110%;
 }
 
 .wrapper {
+  
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "top"
+    "big_img"
+    "grooming"
+    "column_1"
+    "column_2" 
+    "column_3"
+    "partners";
+ 
+}
+#wrapper-block{
   margin: auto;
   width: 1200px;
   background-color: #eee;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-areas:
-    "top top top top"
-    "big_img big_img big_img big_img"
-    "grooming grooming grooming partners"
-    "column_1 column_2 column_3 partners";
-    gap: 20px;
+  gap: 20px;
 }
 .top {
   display: flex;
@@ -37,22 +44,22 @@ body {
   justify-content: space-around;
   gap: 20px;
 }
-.img_text{
+.img_text {
   margin-left: 20px;
   padding: 20px;
 }
-.menu{
+.menu {
   display: flex;
   justify-content: space-around;
   padding: 10px;
   gap: 50px;
   margin-right: 40px;
 }
-.menu li{
+.menu li {
   list-style: none;
   display: block;
 }
-.no_line{
+.no_line {
   text-decoration: none;
   font-weight: 900;
   color: black;
@@ -73,7 +80,7 @@ body {
 .container {
   background-color: white;
 }
-.padding{
+.padding {
   padding: 20px;
 }
 .radius {
@@ -81,20 +88,23 @@ body {
 }
 .grooming {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   grid-area: grooming;
 }
 .grooming img {
   height: 300px;
   width: 650px;
 }
-.grooming_text{
+.grooming_text {
   padding: 20px;
 }
 .partners {
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+#partner-box{
   display: flex;
   grid-area: partners;
-  flex-direction: column;
 }
 .partners_logo {
   display: flex;
@@ -113,13 +123,35 @@ body {
 .column3 {
   grid-area: column_3;
 }
-.column_img{
+.column_img {
   margin: auto;
 }
 .test {
   background-color: yellow;
 }
-.center{
+.center {
+  align-items: center;
+  margin: auto;
+  text-align: center;
+}
+@media screen and (min-width: 1000px) {
+  .wrapper {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "top top top top"
+      "big_img big_img big_img big_img"
+      "grooming grooming grooming partners"
+      "column_1 column_2 column_3 partners";
+  }
+  .partners {
+    flex-direction: column;
+  }
+  .grooming {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    grid-area: grooming;
+  }
+  .center{
+    margin: 0;
+  }
 }
